# tdebase

./: AUTHORS  CMakeLists.txt  ConfigureChecks.cmake  FindXscreensaver.cmake  INSTALL  Mainpage.dox  Makefile.am.in  README  README.pam  c2.h  compton.h  config.h.cmake  configure.in.in  migratekde3  opengl.c  r14-xdg-update  release_notes  startkde  starttde  tdebase.lsm
applnk/: CMakeLists.txt  Makefile.am  kde-development-webdevelopment.directory  kde-development.directory  kde-editors.directory  kde-edu-languages.directory  kde-edu-mathematics.directory  kde-edu-miscellaneous.directory  kde-edu-science.directory  kde-games-arcade.directory  kde-games-board.directory  kde-games-card.directory  kde-games-kids.directory  kde-games-strategy.directory  kde-games.directory  kde-graphics.directory  kde-internet.directory  kde-main.directory  kde-multimedia.directory  kde-office.directory  kde-settings.menu  kde-settingsmenu.directory  kde-system.directory  kde-toys.directory  kde-utilities-accessibility.directory  kde-utilities-desktop.directory  kde-utilities-pim.directory  kde-utilities-xutils.directory  kde-utilities.directory  tde-development-webdevelopment.directory  tde-development.directory  tde-essential.menu  tde-games-arcade.directory  tde-games-board.directory  tde-games-card.directory  tde-games-kids.directory  tde-games-strategy.directory  tde-games.directory  tde-graphics.directory  tde-information.directory  (+25 more)
drkonqi/: CMakeLists.txt  Makefile.am  README  backtrace.cpp  backtrace.h  bugdescription.cpp  bugdescription.h  bugdescriptiondialog.cpp  bugdescriptiondialog.h  crashtest.cpp  crashtest.h  debugger.cpp  debugger.h  drbugreport.cpp  drbugreport.h  krashconf.cpp  krashconf.h  krashdcopinterface.h  main.cpp  sha1.cc  sha1.h  toplevel.cpp  toplevel.h
kappfinder/: CMakeLists.txt  Makefile.am  README.apps  common.cpp  common.h  kappfinder.desktop  main.cpp  main_install.cpp  toplevel.cpp  toplevel.h
kate/: AUTHORS  CMakeLists.txt  COPYING.LIB  ChangeLog  Mainpage.dox  Makefile.am  README
kcontrol/: CMakeLists.txt  ConfigureChecks.cmake  Makefile.am  TODO
kdcop/: CMakeLists.txt  Makefile.am  kdcop.cpp  kdcoplistview.cpp  kdcoplistview.h  kdcopview.ui  kdcopwindow.cpp  kdcopwindow.h
kdebugdialog/: CMakeLists.txt  Makefile.am  README  kabstractdebugdialog.cpp  kabstractdebugdialog.h  kdebugdialog.cpp  kdebugdialog.h  klistdebugdialog.cpp  klistdebugdialog.h  main.cpp  tdelistdebugdialog.cpp  tdelistdebugdialog.h
kdepasswd/: CMakeLists.txt  Makefile.am  kdepasswd.cpp  kdepasswd.desktop  passwd.cpp  passwd.h  passwddlg.cpp  passwddlg.h
kdesktop/: CMakeLists.txt  ConfigureChecks.cmake  DESIGN  KBackgroundIface.h  KDesktopIface.h  KScreensaverIface.h  Makefile.am  bgmanager.cc  bgmanager.h  desktop.cc  desktop.h  init.cc  kcustommenu.cc  kcustommenu.h  kdesktop.desktop  kdesktop.desktop.cmake  kdesktop.kcfg  kdesktopSetAsBackground.desktop  kdesktopapp.cpp  kdesktopapp.h  kdesktopbindings.cpp  kdesktopshadowsettings.cpp  kdesktopshadowsettings.h  kdiconview.cc  kdiconview.h  kfileividesktop.cpp  kfileividesktop.h  klaunch.kcfg  klaunchsettings.kcfgc  krootwm.cc  krootwm.h  kshadowengine.cpp  kshadowengine.h  kshadowsettings.h  kxdglauncher.cpp  kxdglauncher.h  lockeng.cc  lockeng.h  main.cc  minicli.cpp  (+14 more)
kdialog/: CMakeLists.txt  Makefile.am  README  kdialog.cpp  klistboxdialog.cpp  klistboxdialog.h  progressdemo  progressdialog.cpp  progressdialog.h  progressdialogiface.h  tdelistboxdialog.cpp  tdelistboxdialog.h  test  widgets.cpp  widgets.h
kdm/: CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  README  TODO  config.def  configure.in.bot  configure.in.in  confproc.pl
kdmlib/: CMakeLists.txt  Makefile.am  dmctl.cpp  kdmtsak.cpp  kdmtsak.h  kgreet_classic.cpp  kgreet_classic.h  kgreet_pam.cpp  kgreet_pam.h  kgreet_winbind.cpp  kgreet_winbind.h  kgreeterplugin.h
kfind/: CMakeLists.txt  ChangeLog  Kfind.desktop  Makefile.am  README  TODO  findpart.desktop  kdatecombo.cpp  kdatecombo.h  kfind.cpp  kfind.h  kfinddlg.cpp  kfinddlg.h  kfindpart.cpp  kfindpart.desktop  kfindpart.h  kfindpart.kdevses  kftabdlg.cpp  kftabdlg.h  kfwin.cpp  kfwin.h  kquery.cpp  kquery.h  main.cpp
klipper/: CMakeLists.txt  Makefile.am  applet.cpp  applet.h  clipboardpoll.cpp  clipboardpoll.h  configdialog.cpp  configdialog.h  history.cpp  history.h  historyimageitem.cpp  historyimageitem.h  historyitem.cpp  historyitem.h  historystringitem.cpp  historystringitem.h  historyurlitem.cpp  historyurlitem.h  klipper-trinity1.sh  klipper.desktop  klipperbindings.cpp  klipperpopup.cpp  klipperpopup.h  klipperrc.desktop  klipperrc.upd  main.cpp  popupproxy.cpp  popupproxy.h  toplevel.cpp  toplevel.h  urlgrabber.cpp  urlgrabber.h
kmenuedit/: CMakeLists.txt  Makefile.am  basictab.cpp  basictab.h  kcontrol_main.cpp  kcontroleditui.rc  khotkeys.cpp  khotkeys.h  kmenuedit.cpp  kmenuedit.desktop  kmenuedit.h  kmenueditui.rc  main.cpp  menufile.cpp  menufile.h  menuinfo.cpp  menuinfo.h  treeview.cpp  treeview.h
knetattach/: CMakeLists.txt  Makefile.am  TODO  knetattach.desktop  knetattach.ui  knetattach.ui.h  main.cpp
kpager/: CMakeLists.txt  Makefile.am  config.cpp  config.h  desktop.cpp  desktop.h  kpager.cpp  kpager.desktop  kpager.h  main.cpp  windowdrag.cpp  windowdrag.h
kpersonalizer/: CMakeLists.txt  Makefile.am  README  TODO  kcountrypage.cpp  kcountrypage.h  kcountrypagedlg.ui  keyecandypage.cpp  keyecandypage.h  keyecandypagedlg.ui  kfindlanguage.cpp  kfindlanguage.h  kospage.cpp  kospage.h  kospagedlg.ui  kpersonalizer.cpp  kpersonalizer.desktop  kpersonalizer.h  krefinepage.cpp  krefinepage.h  krefinepagedlg.ui  kstylepage.cpp  kstylepage.h  kstylepagedlg.ui  ksysinfo.cpp  ksysinfo.h  main.cpp  stylepreview.ui  stylepreview.ui.h  tdestylepage.cpp  tdestylepage.h  tdestylepagedlg.ui
kscreensaver/: CMakeLists.txt  ChangeLog  KBlankscreen.desktop  KRandom.desktop  Makefile.am  blankscrn.cpp  blankscrn.h  random.cpp  random.h
ksmserver/: CMakeLists.txt  ConfigureChecks.cmake  KSMServerInterface.h  Makefile.am  README  client.cpp  client.h  global.h  ksmserver.upd  legacy.cpp  (+12 more)
(+5035 files in other folders)
